Dec07 Solutions